...
        <variable
            name="userPlacesViewModel"
            type="com.timgeldof.gustfinder.screens.userPlaces.UserPlacesViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
...
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_place_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:src="@drawable/add_icon"
            app:backgroundTint="@color/colorSand"
...
