...

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/descr_wind_icon"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <androidx.cardview.widget.CardView
...
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/title_padding"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/text_my_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_cardview_options"
                    android:layout_marginBottom="@dimen/margin_cardview_options"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/my_locations"
...
